# de-mls

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
apps/de_mls_desktop_ui/: Cargo.toml
apps/de_mls_desktop_ui/assets/: main.css
apps/de_mls_desktop_ui/src/: logging.rs  main.rs
benches/: add_users_benchmark.rs  group_flow_benchmark.rs
contracts/: .env.example  .gas-snapshot  README.md  foundry.toml  package.json  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: IScKeystore.sol  ScKeystore.sol
contracts/test/: ScKeystore.t.sol
crates/bindings/src/: context.rs  deploy.rs  deploymentconfig.rs  foo.rs  ierc20.rs  ierc721.rs  ierc721enumerable.rs  ierc721metadata.rs  ierc721tokenreceiver.rs  isckeystore.rs  lib.rs  mockerc20.rs  mockerc721.rs  ownable.rs  sckeystore.rs
crates/de_mls_ds/: Cargo.toml  build.rs
crates/de_mls_ds/src/: error.rs  lib.rs  topic_filter.rs  transport.rs
crates/de_mls_gateway/: Cargo.toml
crates/de_mls_gateway/src/: bootstrap.rs  forwarder.rs  group.rs  group_registry.rs  handler.rs  lib.rs  mls.rs  welcome_envelope.rs
crates/de_mls_gateway/src/user/: consensus.rs  error.rs  inbound.rs  lifecycle.rs  lock.rs  mod.rs  plugins.rs  registry.rs  state.rs
crates/de_mls_gateway/src/user/plugins/: bundle.rs  mod.rs
crates/de_mls_gateway/tests/: app_message_roundtrip.rs  conversation_sync_idempotent.rs  freeze_coordinator_ordering.rs  leave_after_removal.rs  leave_evicts_registry.rs  multi_conversation_isolation.rs  operating_mode_transitions.rs  pending_join_eviction.rs  recovery_cascade.rs  recovery_inactivity_reelection.rs  rejoin_after_eviction.rs  self_leave_auto_votes.rs  self_leave_dedup.rs  steward_inactivity_commit.rs  steward_small_group_rotation.rs  welcome_broadcast.rs
crates/de_mls_gateway/tests/common/: conversation_fixtures.rs  mod.rs  session_fixtures.rs  wallet.rs
crates/de_mls_ui_protocol/: Cargo.toml
crates/de_mls_ui_protocol/src/: lib.rs
crates/ui_bridge/: Cargo.toml
crates/ui_bridge/src/: lib.rs
ds/: Cargo.toml
ds/src/: chat_client.rs  chat_server.rs  ds.rs  ds_waku.rs  error.rs  keystore.rs  lib.rs  net.rs  topic_filter.rs  transport.rs  waku.rs  waku_actor.rs
ds/tests/: ds_waku_test.rs
examples/: selection_distribution.rs
frontend/: Dockerfile
frontend/.netlify/functions-internal/: render.mjs
frontend/.netlify/server/: index.js  internal.js  manifest-full.js
frontend/src/routes/: +page.svelte
logs/: de_mls_ui.log.2025-10-10
mls_crypto/: Cargo.toml
mls_crypto/src/: api.rs  error.rs  identity.rs  lib.rs  openmls_identity_service.rs  openmls_provider.rs
sc_key_store/: Cargo.toml
sc_key_store/src/: lib.rs  local_ks.rs  pks.rs  sc_ks.rs
src/: action_handlers.rs  admin.rs  app_runtime.rs  bootstrap.rs  cli.rs  contact.rs  conversation.rs  conversation_plugins.rs  defaults.rs  error.rs  events.rs  group.rs  group_actor.rs  group_registry.rs  identity.rs  lib.rs  main.rs  main_loop.rs  member_id.rs  message.rs  openmls_provider.rs  phase_timer.rs  process_result.rs  proposal_kind.rs  protos.rs  state_machine.rs  steward.rs  test_fixtures.rs  topic_filter.rs  user.rs  user_actor.rs  user_app_instance.rs  ws_actor.rs
src/app/: bootstrap.rs  config.rs  consensus.rs  consensus_bridge.rs  consensus_handler.rs  display.rs  error.rs  message_type.rs  mod.rs  peer_scoring.rs  peer_scoring_backends.rs  pending_batches.rs  phase_timer.rs  scheduler.rs  session_runner.rs  state_machine.rs  user.rs
src/app/orchestrator/: consensus.rs  consensus_events.rs  freeze.rs  (+7 more)
src/consensus/: apply_result.rs  bridge.rs  dispatch.rs  events.rs  handle_outcome.rs  mod.rs  outcome_bus.rs  plugin.rs  service.rs  voting.rs
src/conversation/: config.rs  construct.rs  display.rs  handle.rs  inbound.rs  messaging.rs  mod.rs  poll.rs  query.rs  queues.rs  state_machine.rs  steward.rs  util.rs
src/core/: api.rs  config.rs  consensus.rs  consensus_plugin.rs  conversation_plugins.rs  display.rs  error.rs  events.rs  group.rs  group_handle.rs  group_update_handle.rs  inbound.rs  key_package.rs  mod.rs  peer_scoring.rs  plugins.rs  process_result.rs  proposal_framing.rs  proposal_kind.rs  proposal_priority.rs  proposals.rs  provider.rs  state_machine.rs  steward.rs  steward_list.rs  steward_list_plugin.rs  types.rs
src/ds/: error.rs  mod.rs  topic_filter.rs  transport.rs  waku.rs
src/freeze/: apply.rs  mod.rs  round.rs
src/mls_crypto/: api.rs  credentials.rs  engine.rs  error.rs  identity.rs  mod.rs  openmls_identity_service.rs  service.rs  storage.rs  types.rs
src/peer_scoring/: helpers.rs  mod.rs  plugin.rs  service.rs  storage.rs  types.rs
src/session/: consensus.rs  consensus_bridge.rs  consensus_events.rs  construct.rs  conversation.rs  display.rs  error.rs  freeze.rs  inbound.rs  messaging.rs  mod.rs  phase_timer.rs  poll.rs  query.rs  runner.rs  steward.rs  tick.rs
src/steward_list/: deterministic.rs  list.rs  mod.rs  plugin.rs  service.rs
src/user/: README.md  consensus.rs  groups.rs  messaging.rs  mod.rs  proposals.rs  steward.rs  waku.rs
tests/: app_message_roundtrip.rs  async_scoring_removal.rs  consensus_multi_group_test.rs  consensus_realtime_test.rs  conversation_sync_idempotent.rs  core_consensus_api.rs  core_peer_scoring.rs  core_process_inbound.rs  core_steward_list.rs  core_violations.rs  freeze_coordinator_ordering.rs  leave_after_removal.rs  multi_conversation_isolation.rs  operating_mode_transitions.rs  pending_join_eviction.rs  protocol_consensus.rs  protocol_freeze.rs  protocol_join_lifecycle.rs  protocol_leave_sync.rs  protocol_membership.rs  protocol_messaging.rs  protocol_steward.rs  recovery_cascade.rs  recovery_inactivity_reelection.rs  rejoin_after_eviction.rs  sc_key_store_test.rs  scoring_integration.rs  self_leave_dedup.rs  standalone_construction.rs  state_machine_test.rs  steward_inactivity_commit.rs  steward_small_group_rotation.rs  steward_triggered_removal.rs  user_test.rs
tests/common/: harness.rs  mod.rs  session_fixtures.rs  wallet.rs
(+111 files in other folders)
