[workspace]
members = [
    "apps/de_mls_desktop_ui",
    "crates/de_mls_gateway",
    "crates/de_mls_ui_protocol",
    "crates/ui_bridge",
]

[package]
name = "de-mls"
version = "2.1.0"
edition = "2024"
rust-version = "1.85"
description = "Decentralized MLS — end-to-end encrypted group messaging with consensus-based membership management over gossipsub-like networks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vacp2p/de-mls"
homepage = "https://github.com/vacp2p/de-mls"
documentation = "https://docs.rs/de-mls"
readme = "README.md"
keywords = ["mls", "e2ee", "decentralized", "consensus", "group-messaging"]
categories = ["cryptography", "network-programming"]
exclude = ["logos-messaging-nim/", "libs/", "apps/", "examples/", ".github/"]

[features]
default = []
waku = ["base64", "libc"]

[dependencies]
openmls = "0.7.1"
openmls_basic_credential = "0.4.1"
openmls_rust_crypto = "0.4.1"
openmls_traits = "0.4.1"

futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "full"] }
tokio-util = "0.7.13"
alloy = { version = "1.0.37", features = [
    "providers",
    "node-bindings",
    "network",
    "transports",
    "k256",
    "signer-local",
] }

base64 = { version = "0.22", optional = true }

rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.8"

anyhow = "1.0.81"
thiserror = "1.0.39"
uuid = "1.11.0"
async-trait = "0.1.88"

tracing = "0.1.41"

libc = { version = "0.2", optional = true }
prost = "0.13.5"
bytes = "1.10.1"
tower-layer = "0.3.3"
http = "1.3.1"
hashgraph-like-consensus = "0.1.1"

[build-dependencies]
prost-build = "0.13.5"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
