[workspace]
members = [
    "apps/de_mls_desktop_ui",
    "crates/de_mls_gateway",
    "crates/de_mls_ui_protocol",
    "crates/ui_bridge",
]

[package]
name = "de-mls"
version = "3.0.0"
edition = "2024"
rust-version = "1.85"
description = "Decentralized MLS — end-to-end encrypted group messaging with consensus-based membership management over gossipsub-like networks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vacp2p/de-mls"
homepage = "https://github.com/vacp2p/de-mls"
documentation = "https://docs.rs/de-mls"
readme = "README.md"
keywords = ["mls", "e2ee", "decentralized", "consensus", "group-messaging"]
categories = ["cryptography", "network-programming"]
exclude = [
    "logos-messaging-nim/",
    "libs/",
    "apps/",
    "crates/",
    "examples/",
    "tests/",
    ".github/",
    ".cargo/",
    "Makefile",
]

[features]
default = []
waku = ["base64", "libc"]

[dependencies]
openmls = "0.8.1"
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.0"
openmls_traits = "0.5.0"

base64 = { version = "0.22", optional = true }

serde_json = "1.0"
sha2 = "0.10.8"

thiserror = "1.0.39"
uuid = "1.11.0"

tracing = "0.1.41"
indexmap = "2.14.0"

libc = { version = "0.2", optional = true }
prost = "0.14"
hashgraph-like-consensus = "0.5.0"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
alloy = { version = "1.0.37", default-features = false, features = [
    "signer-local",
] }

[build-dependencies]
prost-build = "0.14"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
