[package]
name = "ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waku-bindings = { git = "https://github.com/waku-org/waku-rust-bindings.git",  branch = "force-cluster-15",  subdir = "waku-bindings" }
waku-sys = { git = "https://github.com/waku-org/waku-rust-bindings.git",  branch = "force-cluster-15",  subdir = "waku-sys" }

tokio = { version = "=1.38.0", features = ["full"] }

openmls = { version = "=0.5.0", features = ["test-utils"] }

chrono = "=0.4.38"
lazy_static = "=1.4.0"

anyhow = "=1.0.81"
thiserror = "=1.0.61"

serde_json = "=1.0"
serde = "=1.0.204"
toml = "0.8.19"

env_logger = "0.11.5"
log = "0.4.22"

sc_key_store = { path = "../sc_key_store" }

