[package]
name = "ds"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waku-bindings = { git = "https://github.com/waku-org/waku-rust-bindings.git", branch = "force-cluster-15", subdir = "waku-bindings" }
waku-sys = { git = "https://github.com/waku-org/waku-rust-bindings.git", branch = "force-cluster-15", subdir = "waku-sys" }

tokio = { version = "=1.38.0", features = ["full"] }
kameo = "=0.13.0"

chrono = "=0.4.38"
uuid = { version = "=1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }

anyhow = "=1.0.81"
thiserror = "=1.0.61"

serde_json = "=1.0"
serde = "=1.0.204"

env_logger = "=0.11.5"
log = "=0.4.22"
