[package]
name = "mls_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmls = { version = "0.6.0"}
openmls_basic_credential = "0.3.0"
openmls_rust_crypto = "0.3.0"
openmls_traits = "0.3.0"

anyhow = "1.0.81"
thiserror = "1.0.39"

alloy = { version = "0.11.0", features = [
    "providers",
    "node-bindings",
    "network",
    "transports",
    "k256",
    "signer-local",
] }
