[package]
name = "mls_crypto"
version = "1.0.0"
edition = "2021"

[dependencies]
openmls = "0.7.1"
openmls_basic_credential = "0.4.1"
openmls_rust_crypto = "0.4.1"
openmls_traits = "0.4.1"

thiserror = "1.0.39"

alloy = { version = "1.0.37", features = [
    "providers",
    "node-bindings",
    "network",
    "transports",
    "k256",
    "signer-local",
] }
serde_json = "1.0.149"
