[package]
name = "sc_key_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmls = "0.5.0"
openmls_basic_credential = "0.2.0"
openmls_rust_crypto = "0.2.0"
openmls_traits = "0.2.0"
thiserror = "1.0.61"
anyhow = "1.0.71"
