[package]
name = "sc_key_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundry-contracts.workspace = true

thiserror = "=1.0.61"
anyhow = "=1.0.81"

alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "providers",
    "node-bindings",
    "network",
    "signer-local",
    "transports",
    "transport-http",
    "k256",
] }
