[package]
name = "de-mls-desktop-ui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
de-mls-ui-protocol = { path = "../../crates/de_mls_ui_protocol" }
de-mls-gateway = { path = "../../crates/de_mls_gateway" }
ui-bridge = { path = "../../crates/ui_bridge" }
de-mls = { path = "../../", features = ["waku"] }

dioxus = { version = "0.6.2", features = ["signals", "router", "desktop"] }
dioxus-desktop = "0.6.3"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
futures = "0.3.31"
anyhow = "1.0.100"
thiserror = "2.0.18"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
once_cell = "1.21.3"
parking_lot = "0.12.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.3"
hex = "0.4"
hashgraph-like-consensus = "0.1.1"
