[package]
name = "de_mls_gateway"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
anyhow = "1.0.100"
kameo = "0.13.0"
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

de_mls_ui_protocol = { path = "../de_mls_ui_protocol" }
ds = { path = "../../ds" }
mls_crypto = { path = "../../mls_crypto" }
once_cell = "1.21.3"
parking_lot = "0.12.5"
de-mls = { path = "../../" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
hex = "0.4"
