[package]
name = "de-mls-gateway"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
anyhow = "1.0.100"
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
once_cell = "1.21.3"
parking_lot = "0.12.5"
async-trait = "0.1.88"
tracing = "0.1.41"
hex = "0.4"
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2.0"

hashgraph-like-consensus = "0.1.1"

de-mls-ui-protocol = { path = "../de_mls_ui_protocol" }
de-mls = { path = "../../", features = ["waku"] }
