[package]
name = "de_mls_ui_protocol"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
thiserror = "2.0.17"
hashgraph-like-consensus = "0.1.1"

de_mls = { path = "../../" }
