[package]
name = "ui_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
anyhow = "1.0.100"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

de_mls_gateway = { path = "../de_mls_gateway" }
de_mls_ui_protocol = { path = "../de_mls_ui_protocol" }
de_mls = { path = "../../", features = ["waku"] }
