[package]
name = "ui-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
anyhow = "1.0.100"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

de-mls-gateway = { path = "../de_mls_gateway" }
de-mls-ui-protocol = { path = "../de_mls_ui_protocol" }
de-mls = { path = "../../", features = ["waku"] }
